package com.java.geometry;

public class Carre extends Rectangle {

    public Carre(double cote){
        super(cote, cote);
    }
}
