package com.java.geometry;

public class Line {
    Point p1;
    Point p2;
}
