@startuml

title __GEOMETRY's Class Diagram__\n

  package  {
    package com.java.geometry {
      class Carre {
          + Carre()
      }
    }
  }
  

  package  {
    package com.java.geometry {
      class Line {
      }
    }
  }
  

  package  {
    package com.java.geometry {
      class Point {
          - x : double
          - y : double
          ~ Point()
          ~ Point()
          ~ moveTo()
          ~ display()
          ~ moveRelative()
          ~ moveRelative()
          + getX()
          + setX()
          + getY()
          + setY()
      }
    }
  }
  

  package  {
    package com.java.geometry {
      class Point3D {
          - z : double
          + Point3D()
          + getZ()
          + setZ()
          + toString()
      }
    }
  }
  

  package  {
    package com.java.geometry {
      class Program {
          {static} + main()
      }
    }
  }
  

  package  {
    package com.java.geometry {
      class Rectangle {
          - width : double
          - height : double
          + Rectangle()
          + Rectangle()
          + getSurface()
          + getWidth()
          + setWidth()
          + getHeight()
          + setHeight()
          + getOrigin()
          + setOrigin()
      }
    }
  }
  

  package  {
    package com.java.geometry {
      class TriangleRectangle {
          + TriangleRectangle()
          + TriangleRectangle()
          + getSurface()
          + hypothenuse()
          + getPerimeter()
          + display()
      }
    }
  }
  

  Carre -up-|> Rectangle
  Line o-- Point : p1
  Line o-- Point : p2
  Point3D -up-|> Point
  Rectangle o-- Point : origin
  TriangleRectangle -up-|> Rectangle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
